@@ -28,6 +28,8 @@ LOAD/L <trackname>: load and start playing resource <trackname>
 
 LOADPAUSED/LP <trackname>: load but do not start playing resource <trackname>
 
+LOADLIST <entry> <url>: load a playlist from given <url>, and display its entries, optionally load and play one of these specificed by the integer <entry> (<0: just list, 0: play last track, >0:play track with that position in list)
+
 PAUSE/P: pause playback
 
 STOP/S: stop playback (closes file)
@@ -84,7 +86,7 @@ Note: mpg123 returns errors on stderr, so your frontend should
       look not only at stdout but also at stderr for responses.
       It is a good idea to use --remote-err and just look at stderr.
 
-@R MPG123 (ThOr) v6
+@R MPG123 (ThOr) v7
 	Startup version message. Everything after MPG123 is auxilliary information about behaviour and command support, ID3v2 tag support is new in v3.
 
 @I ID3:<a><b><c>
@@ -106,6 +108,9 @@ Note: mpg123 returns errors on stderr, so your frontend should
 @I <a>
 			Status message after loading a song (no ID3 song info)
 			a = filename without path and extension
+
+@I LISTENTRY <n>: <url>
+	printout of playlists loaded with LOADLIST
 
 @S <a> <b> ...
 	Stream info at beginning of playback, meaning
